--- a/src/component/pageComponent/CarouselComponent.css
+++ b/src/component/pageComponent/CarouselComponent.css
@@ -1,32 +1,44 @@
 .slick-slider .banner {
-    width: 90%;
+    width:90%;
     height: 100%;
-   background-color: transparent;
-    text-align: center;
-    opacity: 0.5;
+
+
+
+    opacity: 0.7;
     padding: 10px;
+    background-color: black;
 
 }
-.slick-center{
-    
-    opacity : 1;
+
+.slick-center {
+
+    opacity: 1;
+    padding: 10px;
+    z-index: 5000;
+}
+
+.slick-center .banner {
+
+    opacity: 1;
     padding: 10px;
 }
-.slick-slider{
-    width: 60vw;
-    margin-left: -25%;
+
+.slick-slider {
+    width: 70vw;
+    margin-left: -36%;
     align-content: center;
     text-align: center;
 }
-.slick-track{
+
+.slick-track {
     margin: auto;
+    height: 180px;
 }
-    
+
 
 .slick-prev::before,
-  .slick-next::before {
-    
+.slick-next::before {
+
     opacity: 0;
     display: none;
-  }
-  
+}
