--- a/src/component/pageComponent/Login.css
+++ b/src/component/pageComponent/Login.css
@@ -2,7 +2,7 @@
     text-align: right;
     
 }
-.btn_login,.btn_join, .btn_info_edit, .btn_upload, .btn_del, .btn_edit{
+.btn_login,.btn_join, .btn_info_edit, .btn_upload, .btn_del, .btn_edit, .btn_comDel{
     padding: 5px;
     background-color: #FE8F8D;
     margin-top: 20px;
